<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/textMainMenuOption" />
        <item
            android:id="@+id/nav_yourHotel"
            android:icon="@drawable/ic_account_balance_black_24dp"
            android:title="@string/textMyHotelMenuOption" />
        <item
            android:id="@+id/nav_visits"
            android:icon="@drawable/ic_motorcycle_black_24dp"
            android:title="@string/textVisitsMenuOption" />
        <item
            android:id="@+id/nav_arrive"
            android:icon="@drawable/ic_place_black_24dp"
            android:title="@string/textHowArriveMenuOption" />
        <item
            android:id="@+id/nav_experience"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/textShareExperienceMenuOption" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/textLogOutMenuOption" />
    </group>

</menu>
