<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.eduardo.hotelcasamia.ManageReservationsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/admin_first_text_reservations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/titleManageReservationsActivity"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/admin_edt_name"
                android:layout_below="@+id/admin_first_text_reservations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:hint="@string/edtNameHint"
                android:inputType="text" />

            <EditText
                android:id="@+id/admin_edt_phone_number"
                android:layout_below="@id/admin_edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/edtPhoneNumberHint"
                android:inputType="phone" />

            <Button
                android:id="@+id/admin_btn_date_in"
                android:layout_below="@id/admin_edt_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/textButtonDateIn"
                android:textColor="@color/White"
                android:background="@color/blue" />

            <TextView
                android:id="@+id/admin_Txv_date_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/admin_btn_date_in"
                android:layout_alignBottom="@+id/admin_btn_date_in"
                android:layout_toEndOf="@+id/admin_btn_date_in"
                android:layout_toRightOf="@+id/admin_btn_date_in"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/tvDateIn"
                android:textSize="19dp" />

            <Button
                android:id="@+id/admin_btn_date_out"
                android:layout_below="@id/admin_Txv_date_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginLeft="10dp"
                android:text="@string/textDateOutButton"
                android:textColor="@color/White"
                android:background="@color/blue" />

            <TextView
                android:id="@+id/admin_Txv_date_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/admin_btn_date_out"
                android:layout_alignBottom="@+id/admin_btn_date_out"
                android:layout_toEndOf="@+id/admin_btn_date_out"
                android:layout_toRightOf="@+id/admin_btn_date_out"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/tvDateOut"
                android:textSize="19dp" />

            <TextView
                android:id="@+id/admin_text_number_children"
                android:layout_below="@id/admin_Txv_date_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/textTitleChildrenNumber"
                android:textSize="17dp" />

            <Spinner
                android:id="@+id/admin_spi_children_number"
                android:layout_below="@id/admin_text_number_children"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp" />

            <TextView
                android:id="@+id/admin_text_number_adults"
                android:layout_below="@id/admin_spi_children_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/textTitleAdultsNumber"
                android:textSize="17dp" />

            <Spinner
                android:id="@+id/admin_spi_adults_number"
                android:layout_below="@id/admin_text_number_adults"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp" />

            <TextView
                android:id="@+id/admin_text_rooms_type"
                android:layout_below="@id/admin_spi_adults_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/textTitleRoomType"
                android:textSize="17dp" />

            <Spinner
                android:id="@+id/admin_spi_rooms_type"
                android:layout_below="@id/admin_text_rooms_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp" />

            <Button
                android:id="@+id/admin_btn_update_reservation"
                android:layout_below="@id/admin_spi_rooms_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="26dp"
                android:text="@string/textUpdateReservationButton"
                android:textColor="@color/White"
                android:background="@color/colorAccent" />

            <Button
                android:id="@+id/admin_btn_delete_reservation"
                android:layout_below="@id/admin_btn_update_reservation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:text="@string/textDeleteReservationButton"
                android:textColor="@color/White"
                android:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/admin_line"
                android:layout_below="@id/admin_btn_delete_reservation"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"
                android:layout_marginTop="8dp"/>

            <android.support.v7.widget.CardView
                android:id="@+id/idCardAdminListReservations"
                android:layout_below="@id/admin_btn_delete_reservation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                card_view:cardBackgroundColor="@color/blue">

                <TextView
                    android:layout_marginTop="20dp"
                    android:id="@+id/text_list_reservations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/textTilteListReservations"
                    android:textColor="@color/White"
                    android:textSize="20dp" />

            </android.support.v7.widget.CardView>

            <ListView
                android:layout_marginTop="20dp"
                android:layout_below="@id/idCardAdminListReservations"
                android:id="@+id/list_reservations"
                android:layout_width="match_parent"
                android:layout_height="8000000dp" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
