<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.eduardo.hotelcasamia.UserActivity">

    <TextView
        android:id="@+id/txv_Welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:textSize="25dp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btn_Reserve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/textReserveButton"
        android:textColor="@color/White"
        android:background="@color/green" />

    <TextView
        android:id="@+id/idFirstTextUserMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_Reserve"
        android:layout_marginTop="28dp"
        android:text="@string/firstTextUserMenu"
        android:textAlignment="center"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/idSecondTextUserMenu"
        android:layout_below="@id/idFirstTextUserMenu"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textPhoneNumberContactUs"
        android:textAlignment="center"
        android:textSize="22dp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btn_log_out"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btn_Reserve"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/btn_Reserve"
        android:layout_marginBottom="11dp"
        android:text="@string/textLogOutButton"
        android:textColor="@color/White"
        android:background="@color/colorAccent" />

</RelativeLayout>
